--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset='utf-8'>
         <title>Chat App</title>
+
+        <link rel='stylsheet' type='text/css' href='SASS/main.scss'>
     </head>
     <body>
         <form class='login' action='/login' method='POST'>
@@ -19,6 +21,9 @@
             </form>
         </main>
 
-
+        <script src='jquery-3.0.0.js'></script>
+        <script src='socket.io-1.4.5.js'></script>
+        <script src='chat-api.js'></script>
+        <script src='js/chat-app.js'></script>
     </body>
 </html>
