--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,9 @@
         </form>
 
         <main class='chat'>
-            <section class='messages'></section>
+            <section class='messages'>
+                <article class='msgTxt'></article>
+            </section>
 
             <form class='send-message' action='/chat' method='POST'>
                 <input type='text' class='message' placeholder='message...' name='message' required>
@@ -21,9 +23,9 @@
             </form>
         </main>
 
-        <script src='jquery-3.0.0.js'></script>
-        <script src='socket.io-1.4.5.js'></script>
-        <script src='chat-api.js'></script>
+        <script src='js/jquery-3.0.0.js'></script>
+        <script src='js/socket.io-1.4.5.js'></script>
+        <script src='js/chat-api.js'></script>
         <script src='js/chat-app.js'></script>
     </body>
 </html>
