JS - add articles to message section everytime message inputed

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 
         <main class='chat'>
             <section class='messages'>
-                <article class='msgTxt'></article>
+                <!-- <article class='msgTxt'></article> -->
             </section>
 
             <form class='send-message' action='/chat' method='POST'>
