SASS - added variables and layout file, made message form only appear after login. HTML - fixed link tag for css style sheet

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <title>Chat App</title>
 
-        <link rel='stylsheet' type='text/css' href='SASS/main.scss'>
+        <link rel='stylesheet' type='text/css' href='styles.css'>
     </head>
     <body>
         <form class='login' action='/login' method='POST'>
